@@ -1,3 +1,7 @@
+2011-09-13  MIYAMUKO Katsuyuki
+
+	* "xl-" を付けなくても (require "ppcre") でロードできるようにした
+
 2011-09-07  MIYAMUKO Katsuyuki
 
 	* xl-ppcre 1.0.0 リリース
